<resources>
    <string name="app_name">Gestion du Camping</string>
    <string name="hello_world">Bienvenue aux BTS SIO Lycée Chevrollier - ANGERS!</string>
    <string name="titreClient">Ajout d\'un client</string>
    <string name="nomClient">Nom</string>
    <string name="prenomClient">Prenom</string>
    <string name="dateNaissClient">Date de naissance</string>
    <string name="numPortableClient">Numéro de portable</string>
    <string name="buttonEnregistrer">Enregistrer</string>
    <string name="buttonReset">Effacer</string>
    <string name="buttonAjouterClient">Ajouter un client</string>
    <string name="buttonListeClient">Liste des clients</string>
    <string name="buttonModifier" >Modifier</string>
</resources>
