<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quent.camping.ActivityClient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titreClient"
                android:id="@+id/textViewTitreClient"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextNomClient"
                android:hint="@string/nomClient"
                android:width="250dp"
                android:layout_below="@+id/textViewTitreClient"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextPrenomClient"
                android:hint="@string/prenomClient"
                android:width="250dp"
                android:layout_below="@+id/editTextNomClient"
                android:layout_alignStart="@+id/editTextNomClient"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editTextDateNaissClient"
                android:hint="@string/dateNaissClient"
                android:width="250dp"
                android:layout_below="@+id/editTextPrenomClient"
                android:layout_alignStart="@+id/editTextPrenomClient"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/datePickerDateNaiss" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editTextNumPortableClient"
                android:hint="@string/numPortableClient"
                android:width="250dp"
                android:layout_below="@+id/editTextDateNaissClient"
                android:layout_alignStart="@+id/editTextDateNaissClient"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonReset"
                    android:id="@+id/buttonEffacer"
                    android:width="120dp"
                    android:layout_alignTop="@+id/buttonEnregistrer"
                    android:layout_alignEnd="@+id/editTextNumPortableClient"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonEnregistrer"
                    android:id="@+id/buttonEnregistrer"
                    android:width="120dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
